# qzn3t

./: .gitignore  build  clean  oldCargo.toml
jack_rec/: Cargo.toml  README.md
jack_rec/src/: main.rs
lpx_ctl/: Cargo.toml  README.md  colour_demo_layout.txt  drum_layout.txt  drum_pattern_01.json  drum_pattern_02.json  drum_pattern_03.json  llm_instructions.txt  make_cfg  test_layout_1.txt  test_layout_2.txt  test_layout_4.txt
lpx_ctl/src/: lpx_ctl_error.rs  main.rs  section.rs
lpx_midi/: Cargo.toml  README.md  demo  rustfmt.toml
lpx_midi/src/: main.rs
lv2_ctl/: Cargo.toml  README.md  rustfmt.toml
lv2_ctl/src/: app.rs  colours.rs  errors.rs  lv2.rs  lv2_simulator.rs  lv2_stateful_list.rs  main.rs  mod_host_controller.rs  modhost_resp.rs  port.rs  port_table.rs  run_executable.rs
midi_sample/: Cargo.toml  config.json
midi_sample/samples/: snare.flac
midi_sample/src/: main.rs
midi_x/: Cargo.toml
midi_x/src/: main.rs  midi_actions.rs
peak_volume/: Cargo.toml
peak_volume/src/: main.rs
