[package]
name = "jack_rec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
jack = "0.11"

# Output a JSON description of created files
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
